fixed design library tabs alignment

--- a/src/components/modal-design-library/editor.scss
+++ b/src/components/modal-design-library/editor.scss
@@ -258,16 +258,19 @@
 }
 
 // Design library top tabs, switch between block categories, ui kit and wireframe.
-.stk-design-library-tabs .components-button {
-	height: 60px;
-	border: none !important;
-	border-left: 1px solid #ddd !important;
-	box-shadow: none !important;
-	padding: 0 24px;
-	background: transparent;
-	&:hover,
-	&.is-primary {
-		color: #f00069 !important;
-		background: rgba(229, 67, 118, 0.1) !important;
+.stk-design-library-tabs {
+	margin-bottom: 0 !important;
+	.components-button {
+		height: 60px;
+		border: none !important;
+		border-left: 1px solid #ddd !important;
+		box-shadow: none !important;
+		padding: 0 24px;
+		background: transparent;
+		&:hover,
+		&.is-primary {
+			color: #f00069 !important;
+			background: rgba(229, 67, 118, 0.1) !important;
+		}
 	}
 }
